Fix transitions flickering

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -174,6 +174,9 @@ h1 {
   opacity: 0;
   transition: opacity 600ms 300ms;
 }
+.fluxus-fade-in-600-enter-done {
+  opacity: 1;
+}
 
 .fluxus-fade-in-600-wait-1500-enter {
   opacity: 0;
@@ -188,4 +191,7 @@ h1 {
 .fluxus-fade-in-600-wait-1500-exit-active {
   opacity: 0;
   transition: opacity 600ms 1.5s;
+}
+.fluxus-fade-in-600-wait-1500-enter-done {
+  opacity: 1;
 }
